fixed way too big margins

--- a/style.css
+++ b/style.css
@@ -47,10 +47,8 @@ header {
 }
 
 #contact-info {
-  margin-top: -10px;
   color: var(--black);
   margin-left: -5px;
-  margin-top: 10px;
   font-size: 14px;
 }
 
@@ -75,6 +73,7 @@ header {
 #skills {
   list-style-type: none;
   margin-left: -40px;
+  margin-top: 0px;
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -134,6 +133,7 @@ header {
   border-bottom: 1px solid var(--black);
   width: 60%;
   font-weight: 400;
+  margin-bottom: 9px;
 }
 
 .job-info{
